# end-to-end-fraud-detection

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app_ui.py  pyproject.toml
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml
fraud_detection/: config.py
fraud_detection/data/: ingestion.py  loader.py  schema.py  synthetic.py
fraud_detection/features/: engineering.py
fraud_detection/monitoring/: drift.py  metrics.py
fraud_detection/serving/: api.py  inference.py
fraud_detection/training/: evaluation.py  trainer.py
logs/: predictions.jsonl
models/: model_v0.1.0.joblib  model_v0.1.0_metadata.json
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_schema.py
