[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
authors = [
    { name="Yusuf Emre Katkat", email="yusufemrekatkat2@gmail.com"}
]
description = "Production-grade real-time fraud detection ML system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "joblib>=1.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
exclude = ["data", "logs", "docker", "models", "tests"]